CSS fixes
Fixed routesearch padding error, fixed error where maps on My Account would overlap when search is opened

--- a/frontend/src/style/myaccount.css
+++ b/frontend/src/style/myaccount.css
@@ -39,18 +39,19 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(700px, 1fr));
     grid-row-gap: 50px; 
     margin-left: 2%;
     margin-right: 2%;
     margin-bottom: 25px;
-    justify-content: center;
+    justify-items: center;
     border: 2px solid lightgray;
     padding-left: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 25px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    grid-auto-flow: dense;
 }
 
 .grid-item {
@@ -61,6 +62,7 @@
     margin-left: 2%;
     margin-right: 2%;
     max-width: 720px;
+    min-width: 720px;
 }
 
 .info {
